# Codebase-Assistance-using-RAG

./: README.md
RAG/: INDEX.md  INSTALLATION.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_RUNNING.md  cli.py  pyproject.toml  requirements.txt  run_streamlit.ps1
RAG/data/faiss_index/: chunks.pkl  index.faiss
RAG/examples/: example_advanced_search.py  example_build_and_search.py
RAG/repo_to_index/: auth.py  database.py  main.py
RAG/src/: __init__.py  config.py  rag_system.py
RAG/src/context/: git_context.py
RAG/src/ingestion/: code_ingestion.py
RAG/src/query_expansion/: llm_expander.py
RAG/src/rag_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
RAG/src/ranking/: cross_encoder.py
RAG/src/retrieval/: semantic_retriever.py
RAG/src/ui/: app.py
RAG/src/utils/: logger.py  models.py
RAG/tests/: test_components.py
